# My_QtWechat

./: CMakeLists.txt  README.md  main.cpp  user_info.cpp  user_info.h
Login/: login.cpp  login.h  loginPage_main.cpp  loginPage_main.h  loginPage_scan.cpp  loginPage_scan.h
src/: SidebarQss.qss
userWidget/: PersonalPage.cpp  PersonalPage.h  SideBar.cpp  SideBar.h  main_widget.cpp  main_widget.h
userWidget/Contact/: ContactPage.cpp  ContactPage.h
userWidget/Message/: Buddy.cpp  Buddy.h  MessagePage.cpp  MessagePage.h  TalkPage.cpp  TalkPage.h  my_Line.cpp  my_Line.h
